--- a/Desktop/sms/public/embed-jonathanpeters.html
+++ b/Desktop/sms/public/embed-jonathanpeters.html
@@ -7,7 +7,7 @@
   <!--
     How to use:
     1) Copy the <section> and the two <script> tags into the page on https://jonathanpeters.com
-    2) Ensure the SMS server (tourmaline-meerkat-3129f1.netlify.app) has ALLOWED_ORIGINS set to include:
+  2) Ensure the SMS server (sf-sms-service.netlify.app) has ALLOWED_ORIGINS set to include:
        https://jonathanpeters.com https://www.jonathanpeters.com
     3) Don’t test this file via file:// — CORS will block it. Test on your actual domain.
   -->
@@ -40,7 +40,7 @@
   </section>
 
   <!-- Load the SMS login script from your Netlify SMS site -->
-  <script src="https://tourmaline-meerkat-3129f1.netlify.app/public/sf-sms-login.js" defer></script>
+  <script src="https://sf-sms-service.netlify.app/public/sf-sms-login.js" defer></script>
 
   <!-- Optional: react to successful login -->
   <script>
