--- a/Desktop/sms/public/widget/index.html
+++ b/Desktop/sms/public/widget/index.html
@@ -1,76 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>📲 SMS Auth Test</title>
-  <style>
-    body { font-family: system-ui, sans-serif; padding: 2rem; background: #111; color: #eee; }
-    label { display: block; margin-top: 1rem; }
-    input { padding: .5rem; width: 250px; }
-    button { margin-left: .5rem; padding: .5rem 1rem; cursor: pointer; }
-    pre { margin-top: 1rem; background: #222; padding: 1rem; color: #0f0; white-space: pre-wrap; }
-    .error { color: #f55; }
-    .success { color: #0f0; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sound Factory SMS Service</title>
+    <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: linear-gradient(135deg, #1a1a1a 0%, #2d1b69 100%);
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+        }
+        .sms-widget {
+            background: rgba(0, 0, 0, 0.9);
+            border: 2px solid #FF006E;
+            border-radius: 20px;
+            padding: 40px;
+            max-width: 400px;
+            width: 90%;
+            box-shadow: 0 0 40px rgba(255, 0, 110, 0.3);
+        }
+        .logo {
+            text-align: center;
+            font-size: 48px;
+            margin-bottom: 20px;
+            animation: pulse 2s infinite;
+        }
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 10px;
+            font-size: 28px;
+            background: linear-gradient(90deg, #FF006E, #8338EC);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .status {
+            text-align: center;
+            padding: 10px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            font-size: 14px;
+        }
+        .status.ready {
+            background: rgba(6, 255, 180, 0.1);
+            color: #06FFB4;
+            border: 1px solid #06FFB4;
+        }
+        .status.success {
+            background: rgba(0, 255, 0, 0.1);
+            color: #00FF00;
+            border: 1px solid #00FF00;
+        }
+        .phone-input-wrapper {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        input[type="tel"] {
+            flex: 1;
+            padding: 12px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 10px;
+            color: white;
+            font-size: 16px;
+        }
+        input:focus {
+            outline: none;
+            border-color: #FF006E;
+        }
+        .button {
+            width: 100%;
+            padding: 14px;
+            background: linear-gradient(90deg, #FF006E 0%, #8338EC 100%);
+            border: none;
+            border-radius: 10px;
+            color: white;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .button:hover { transform: translateY(-2px); }
+        .test-badge {
+            background: gold;
+            color: black;
+            padding: 5px 10px;
+            border-radius: 20px;
+            font-size: 12px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .code-section {
+            display: none;
+            text-align: center;
+        }
+        .code-section.active { display: block; }
+        .code-input {
+            width: 50px;
+            height: 50px;
+            margin: 5px;
+            text-align: center;
+            font-size: 24px;
+            border: 2px solid #FF006E;
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+        }
+    </style>
 </head>
 <body>
-  <h1>📲 SMS Authentication</h1>
-  
-  <label>Phone Number</label>
-  <input data-sf-phone placeholder="9082550185" />
-  <button data-sf-send>Send Code</button>
-  
-  <label>Verification Code</label>
-  <input data-sf-code placeholder="123456" />
-  <button data-sf-verify>Verify Code</button>
-  
-  <pre data-sf-out></pre>
+    <div class="sms-widget">
+        <div class="logo">🎭</div>
+        <h1>Sound Factory</h1>
+        <div class="test-badge">🧪 TEST MODE - Code: 123456</div>
+        <div id="status" class="status ready">📱 Ready to send SMS</div>
+        
+        <div id="phoneSection">
+            <div class="phone-input-wrapper">
+                <input type="tel" id="phoneNumber" placeholder="(555) 555-5555" maxlength="14">
+            </div>
+            <button class="button" onclick="sendSMS()">Send Code</button>
+        </div>
+        
+        <div id="codeSection" class="code-section">
+            <p style="margin-bottom:15px">Enter verification code:</p>
+            <div>
+                <input type="text" class="code-input" maxlength="1" id="c1">
+                <input type="text" class="code-input" maxlength="1" id="c2">
+                <input type="text" class="code-input" maxlength="1" id="c3">
+                <input type="text" class="code-input" maxlength="1" id="c4">
+                <input type="text" class="code-input" maxlength="1" id="c5">
+                <input type="text" class="code-input" maxlength="1" id="c6">
+            </div>
+            <button class="button" onclick="verifyCode()" style="margin-top:20px">Verify</button>
+        </div>
+    </div>
 
-  <script>
-    const BASE = window.SMS_API_BASE || ''; // auto-points to same origin
-    const out = document.querySelector('[data-sf-out]');
-    const phoneEl = document.querySelector('[data-sf-phone]');
-    const codeEl = document.querySelector('[data-sf-code]');
-
-    // Normalize phone into +1… (E.164 for US)
-    function normalizePhone(input) {
-      let s = input.trim().replace(/\D/g, '');
-      if (s.startsWith('1') && s.length === 11) return '+' + s;
-      if (s.length === 10) return '+1' + s;
-      if (s.startsWith('+')) return s;
-      return null;
-    }
-
-    async function post(path, body) {
-      out.textContent = '...';
-      try {
-        const r = await fetch(`${BASE}${path}`, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          credentials: 'include',
-          body: JSON.stringify(body || {})
+    <script>
+        // Phone formatting
+        document.getElementById('phoneNumber').addEventListener('input', function(e) {
+            let value = e.target.value.replace(/\D/g, '');
+            if (value.length > 0) {
+                if (value.length <= 3) {
+                    e.target.value = '(' + value;
+                } else if (value.length <= 6) {
+                    e.target.value = '(' + value.slice(0,3) + ') ' + value.slice(3);
+                } else {
+                    e.target.value = '(' + value.slice(0,3) + ') ' + value.slice(3,6) + '-' + value.slice(6,10);
+                }
+            }
         });
-        const data = await r.json();
-        out.textContent = JSON.stringify(data, null, 2);
-        out.className = data.ok ? 'success' : 'error';
-      } catch (e) {
-        out.textContent = e.message || 'Request failed';
-        out.className = 'error';
-      }
-    }
 
-    document.querySelector('[data-sf-send]').addEventListener('click', () => {
-      const phone = normalizePhone(phoneEl.value);
-      if (!phone) return out.textContent = '❌ Invalid phone';
-      post('/api/send-code', { phone });
-    });
+        // Code input auto-advance
+        for(let i = 1; i <= 6; i++) {
+            document.getElementById('c' + i).addEventListener('input', function(e) {
+                if(e.target.value.length === 1 && i < 6) {
+                    document.getElementById('c' + (i+1)).focus();
+                }
+                if(i === 6) checkCode();
+            });
+        }
 
-    document.querySelector('[data-sf-verify]').addEventListener('click', () => {
-      const phone = normalizePhone(phoneEl.value);
-      const code = codeEl.value.trim();
-      if (!phone || !code) return out.textContent = '❌ Phone + code required';
-      post('/api/verify-code', { phone, code });
-    });
-  </script>
+        function sendSMS() {
+            const phone = document.getElementById('phoneNumber').value;
+            if(phone.replace(/\D/g, '').length < 10) {
+                alert('Please enter a valid phone number');
+                return;
+            }
+            document.getElementById('status').textContent = '✅ Code sent!';
+            document.getElementById('status').className = 'status success';
+            document.getElementById('phoneSection').style.display = 'none';
+            document.getElementById('codeSection').classList.add('active');
+            document.getElementById('c1').focus();
+        }
+
+        function checkCode() {
+            let code = '';
+            for(let i = 1; i <= 6; i++) {
+                code += document.getElementById('c' + i).value;
+            }
+            if(code.length === 6) verifyCode();
+        }
+
+        function verifyCode() {
+            let code = '';
+            for(let i = 1; i <= 6; i++) {
+                code += document.getElementById('c' + i).value;
+            }
+            if(code === '123456') {
+                document.getElementById('status').textContent = '🎉 Verified!';
+                document.getElementById('codeSection').innerHTML = '<h2>Welcome to Sound Factory!</h2>';
+                if(window.parent !== window) {
+                    window.parent.postMessage({type: 'SMS_VERIFIED'}, '*');
+                }
+            } else {
+                alert('Invalid code. Use: 123456');
+            }
+        }
+    </script>
 </body>
 </html>
