Deploy: Updated promoters platform (sanitized version without API keys)

--- a/Desktop/promo/backuppromoters-new/public/promoter-signup.html
+++ b/Desktop/promo/backuppromoters-new/public/promoter-signup.html
@@ -553,6 +553,7 @@ input::placeholder{
       <img class="logo" src="sf-logo.png" alt="Sound Factory" />
     </div>
     
+<!-- Updated for Team branding -->
     <h1>Join the Sound Factory Team</h1>
     <p class="subtitle">Work with a legendary brand. Get paid directly, securely, and instantly with Stripe Connect.</p>
     
